# wav2letter-bak

./: .gitignore  CMakeLists.txt
inference/: CMakeLists.txt
inference/cmake/: CMakeGraphVizOptions.cmake
inference/inference/examples/: CMakeLists.txt  InteractiveStreamingLibTorchASRExample.cpp  InteractiveStreamingTorchASRExample.cpp  SerializationFbGemmToLibTorchExample.cpp  SimpleStreamingLibTorchASRExample.cpp  example.cpp  main.cpp
inference/inference/module/: CMakeLists.txt  InferenceModule.cpp  InferenceModule.h
inference/inference/module/feature/: CMakeLists.txt  LogMelFeature.cpp  LogMelFeature.h
inference/inference/module/nn/: CMakeLists.txt  Conv1d.cpp  Conv1d.h  Identity.cpp  Identity.h  LayerNorm.cpp  LayerNorm.h  Linear.cpp  Linear.h  LocalNorm.cpp  LocalNorm.h  Relu.cpp  Relu.h  Residual.cpp  Residual.h  Sequential.cpp  Sequential.h  TorchModule.cpp  TorchModule.h  TorchUtil.cpp  TorchUtil.h  Util.cpp  Util.h  nn.h
inference/inference/module/nn/backend/fbgemm/: CMakeLists.txt  Conv1dFbGemm.cpp  Conv1dFbGemm.h  LinearFbGemm.cpp  LinearFbGemm.h
inference/inference/module/nn/python/: modules.py  script.py
src/libraries/: CMakeLists.txt
